--- a/profiler/src/main/webapp/index.html
+++ b/profiler/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <link type="text/css" href="lib/META-INF/resources/webjars/jquery-ui/1.13.2/jquery-ui.css" rel="stylesheet"/>
     <link type="text/css" href="lib/META-INF/resources/webjars/jquery-ui/1.13.2/jquery-ui.structure.css" rel="stylesheet"/>
     <link type="text/css" href="css/jquery-ui.theme.css" rel="stylesheet"/>
-    <link type="text/css" href="lib/ehynds/jquery.notify/1.4/ui.notify.css" rel="stylesheet"/>
+    <link type="text/css" href="lib/ehynds/jquery.notify/1.4.1/ui.notify.css" rel="stylesheet"/>
     <link type="text/css" href="lib/jquery.timepicker/css/jquery.timepicker.css" rel="stylesheet"/>
     <link type="text/css" href="lib/jquery.timepicker/css/bootstrap-datepicker.css" rel="stylesheet"/>
     <link type="text/css" href="css/prof.css" rel="stylesheet"/>
@@ -253,9 +253,9 @@ $id$ : the same as *, but matched symbols will be replaced to $id$ in result. It
 <script type="text/javascript" language="JavaScript" src="lib/jquery-migrate/1.4.1/js/jquery-migrate.min.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/jquery-migrate/3.3.2/js/jquery-migrate.min.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/META-INF/resources/webjars/jquery-ui/1.13.2/jquery-ui.js"></script>
-<script type="text/javascript" language="JavaScript" src="lib/thirdparty/carhartl/jquery.cookie/1.3.1/jquery.cookie.js"></script>
+<script type="text/javascript" language="JavaScript" src="lib/thirdparty/carhartl/jquery.cookie/1.3.1/package/jquery.cookie.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/thirdparty/benalman/jquery.bbq/1.2.1/jquery.ba-bbq.min.js"></script>
-<script type="text/javascript" language="JavaScript" src="lib/thirdparty/aflesler/jquery.rule/1.0.2/jquery.rule-min.js"></script>
+<script type="text/javascript" language="JavaScript" src="lib/thirdparty/aflesler/jquery.rule/1.1.2/package/jquery.rule.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/jquery.event.drag/js/jquery.event.drag.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/jquery.timepicker/js/jquery.timepicker.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/jquery.timepicker/js/bootstrap-datepicker.js"></script>
@@ -263,9 +263,9 @@ $id$ : the same as *, but matched symbols will be replaced to $id$ in result. It
 <script type="text/javascript" language="JavaScript" src="lib/datepair/js/jquery.datepair.js"></script>
 <script type="text/javascript" language="JavaScript" src="js/lib/slick.grid.js"></script>
 <script type="text/javascript" language="JavaScript" src="js/lib/slick.model.js"></script>
-<script type="text/javascript" language="JavaScript" src="lib/ehynds/jquery.notify/1.4/jquery.notify.js"></script>
+<script type="text/javascript" language="JavaScript" src="lib/ehynds/jquery.notify/1.4.1/jquery.notify.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/thirdparty/janwolter/querystring/1.0.0/QueryString.js"></script>
-<script type="text/javascript" language="JavaScript" src="lib//thirdparty/almende/timeline/2.5.0/timeline.js"></script>
+<script type="text/javascript" language="JavaScript" src="lib/thirdparty/almende/timeline/2.9.1/timeline.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/moment.timezone/js/moment.stub.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/moment-timezone/js/moment-timezone-with-data.min.js"></script>
 <script type="text/javascript" language="JavaScript" src="lib/jstz/js/jstz.js"></script>
